--- a/GPT/batch_gpt.ipynb
+++ b/GPT/batch_gpt.ipynb
@@ -74,8 +74,8 @@
    "source": [
     "# define your graph xml, and input and output directory paths\n",
     "template_xml = path.join(os.getcwd(),'config_template.xml')\n",
-    "input_dir = path.join(os.getcwd(),'L1_input')\n",
-    "output_dir = path.join(os.getcwd(),'L2_output')"
+    "input_dir = path.join(os.getcwd(),'GPT_L1_input')\n",
+    "output_dir = path.join(os.getcwd(),'GPT_L2_output')"
    ]
   },
   {
@@ -176,21 +176,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
